# tap-gong

./: Pipfile  pyproject.toml  tox.ini
.github/workflows/: veracode-static-scan.yml
tap_gong/: auth.py  client.py  config_helper.py  tap.py  utils.py
tap_gong/streams/: aggregated_activity.py  call_transcripts.py  calls.py  interaction_stats.py  users.py
tap_gong/tests/: test_core.py
