[tool.poetry]
name = "tap-gong"
version = "1.1.0"
description = "`tap-gong` is a Singer tap for Gong, built with the Meltano SDK for Singer Taps."
authors = ["Stephen Bailey"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.8.0"
requests = "^2.32.0"
singer-sdk = ">=0.42.1"
simpleeval = "^0.9.13"
python-dateutil = "^2.9.0"
cryptography = ">=44.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-gong = 'tap_gong.tap:TapGong.cli'
