[project]
name = "tap-gong"
version = "1.1.0"
description = "`tap-gong` is a Singer tap for Gong, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Xfactor Engineering" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "singer-sdk>=0.42.1",
    "simpleeval>=0.9.13",
    "python-dateutil>=2.9.0",
    "cryptography>=44.0.1",
]

[project.scripts]
tap-gong = "tap_gong.tap:TapGong.cli"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
